# marvelous-designer-mcp

./: .gitignore  LICENSE  MEMORY.md  README.md  pyproject.toml
cpp_plugin/: CMakeLists.txt  MdMcpPlugin.cpp  MdMcpPlugin.h  MdMcpServer.cpp  MdMcpServer.h  README.md  build.bat  dllmain.cpp  probe.cpp
md_addon/: md_listener.py
scripts/: install_md_plugin.py  md_start_listener.py  probe_as_plugin.py
src/marvelous_designer_mcp/: __main__.py  bridge.py  config.py  server.py
