[project]
name = "marvelous-designer-mcp"
version = "0.2.0"
description = "Model Context Protocol server for Marvelous Designer"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
marvelous-designer-mcp = "marvelous_designer_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marvelous_designer_mcp"]
